[project]
name = "nazurin"
version = "2.8.2"
description = "Images collection done right. A Telegram bot that helps you collect ACG illustrations."
readme = "README.md"
authors = [{ name = "y-young", email = "i@gpx.moe" }]
license-files = ["LICENSE"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiofiles~=23.2.1",
    "aiogram~=3.13.0",
    "aiohttp~=3.9.0",
    "aiohttp-cors~=0.7.0",
    "aiohttp-socks~=0.8.4",
    "aiojobs==1.2.0",
    "async-lru~=2.0.2",
    "beautifulsoup4~=4.10.0",
    "cloudant~=2.15.0",
    "curl-cffi~=0.7.4",
    "dnspython~=2.1.0",
    "environs~=11.0.0",
    "firebase-admin~=6.1.0",
    "humanize~=4.8.0",
    "loguru~=0.6.0",
    "mega-py",
    "minio~=7.1.16",
    "motor~=3.4.0",
    "pillow~=10.1.0",
    "pixivpy3~=3.7.2",
    "pybooru~=4.2.2",
    "pydantic~=2.7.1",
    "pydrive2~=1.15.1",
    "pymongo<4.9",
    "tenacity~=8.2.2",
    "tinydb~=4.5.2",
]

[project.scripts]
nazurin = "nazurin:__main__"

[project.urls]
Homepage = "https://github.com/y-young/nazurin"
Documentation = "https://nazurin.readthedocs.io/"
Repository = "https://github.com/y-young/nazurin.git"
Issues = "https://github.com/y-young/nazurin/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
extend-select = [
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "FBT",    # flake8-boolean-trap
    "G",      # flake8-logging-format
    "I",      # isort
    "INP",    # flake8-no-pep420
    "ISC",    # flake8-implicit-str-concat
    "N",      # pep8-naming
    "PERF",   # perflint
    "PL",     # pylint
    "RSE102", # unnecessary-paren-on-raise-exception
    "RUF",    # ruff
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "UP",     # pyupgrade
]
ignore = ["UP007", "PERF203", "COM812", "ISC001"]

[tool.uv.sources]
mega-py = { git = "https://github.com/y-young/mega.py", rev = "6015359" }

[dependency-groups]
dev = ["pre-commit~=3.3.0", "pytest~=8.3.3"]
